--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solmate",
+  "name": "@metalabel/solmate",
   "license": "AGPL-3.0-only",
   "version": "6.6.2",
   "description": "Modern, opinionated and gas optimized building blocks for smart contract development.",
